# agentpay

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LAUNCH.md  LAUNCH_CHECKLIST.md  Makefile  README.md  SECURITY.md  TROUBLESHOOTING.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  github-readme.md  llms-install.md  llms.txt  openapi.json  pyproject.toml  reddit-posts.md  requirements-lock.txt  requirements.txt  ruff.toml  setup.sh  smithery.yaml  start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
alembic/: env.py
api/: dependencies.py  main.py  middleware.py  models.py
bot/: main.py
config/: agentpay-api.service  agentpay-bot.service  settings.py
core/: approvals.py  encryption.py  wallet.py  webhooks.py
deploy/: agentpay.service  deploy.sh
docs/: RELEASE_CHECKLIST.md  api-reference.md  architecture.md  competitive-landscape.md  erc-8004-integration.md  getting-started.md  lobehub-plugin-submission.json  product-hunt-copy.md  product-hunt-launch.md  pypi-publish-guide.md  security-architecture.md  security-model.md  troubleshooting.md  tutorial-give-your-agent-a-wallet.md
examples/: README.md  anthropic_claude_agent.py  autogen_agent.py  basic_usage.py  basic_usage.ts  budget_manager.py  crewai_agent.py  curl_examples.sh  express_billing_middleware.ts  fastapi_billing_middleware.py  google_adk_agent.py  langchain_agent.py  langgraph_agent.py  llamaindex_agent.py  mastra_agent.ts  mcp_client.py  mcp_server_paid_tools.py  microsoft_agent_example.py  multi_agent_budget.py  nextjs_api_route.ts  openai_agent.py  openai_agents_sdk.py  pydantic_ai_agent.py  smolagents_agent.py  vercel_ai_agent.ts  webhook_receiver.py  webhook_receiver.ts  x402_agent.py
integrations/: README.md
landing/: index.html  llms-full.txt  llms.txt  robots.txt  script.js  sitemap.xml  style.css
mcp/: agentpay_tool.json  server.py  server_http.py
miniapp/: app.js  index.html  style.css
models/: database.py  schema.py
providers/: coinbase_wallet.py  lithic_card.py  local_wallet.py  solana_wallet.py  telegram_stars.py  x402_protocol.py
scripts/: agentpay-cli.py  check-new-users.py  deploy-linux.sh  deploy-local.sh  healthcheck.sh  preflight.sh  setup.sh  update-tunnel-url.py
sdk/: README.md  pyproject.toml  setup.py
sdk-ts/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
sdk/agentpay/: README.md  __init__.py  async_client.py  client.py  exceptions.py  models.py  pyproject.toml
sdk/tests/: test_async_client.py  test_client.py
sdk/ts/: README.md  package-lock.json  package.json  tsconfig.json
sdk/ts/src/: client.ts  errors.ts  index.ts  types.ts  webhook.ts
sdk/ts/tests/: client.test.ts  webhook.test.ts
static/: robots.txt
tests/: conftest.py  test_admin.py  test_agents_coverage.py  test_agents_routes.py  test_api.py  test_approvals.py  (+37 more)
(+49 files in other folders)
