[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentpay"
version = "0.1.0"
description = "Python SDK for AgentPay — payment infrastructure for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AgentPay", email = "hello@leofundmybot.dev" },
]
keywords = [
    "ai",
    "agents",
    "payments",
    "crypto",
    "usdc",
    "x402",
    "telegram",
    "wallet",
    "stablecoins",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://leofundmybot.dev"
Documentation = "https://leofundmybot.dev/docs-site/"
Repository = "https://github.com/lfp22092002-ops/agentpay"
"API Reference" = "https://leofundmybot.dev/docs"
"Bug Tracker" = "https://github.com/lfp22092002-ops/agentpay/issues"
"Telegram Bot" = "https://t.me/FundmyAIbot"

[tool.hatch.build.targets.wheel]
packages = ["."]
